Session 9: Kafka Listener and Publisher + start and test end to end